Attempt to fix Bg img for lesson 3

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -55,7 +55,7 @@ header{
       margin-top:0px;
       margin-bottom: 100px;
   }
-  
+
 
 
 .dropOne{
@@ -181,7 +181,7 @@ header{
   background-image: url("../img/mickeyPeril.jpg");
   }
 .three{
-  background-image: url("../img/porkyHunt.png");
+  background-image: url("../img/porkyHunt.PNG");
   }
 .four{
   background-image: url("../img/hippo.png");
