Fixed bg image of lesson 3 and updated the more recent lesson links

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -181,7 +181,7 @@ header{
   background-image: url("../img/mickeyPeril.jpg");
   }
 .three{
-  background-image: url("../img/porkyHunt.PNG");
+  background-image: url("../img/porkyHunt.jpg");
   }
 .four{
   background-image: url("../img/hippo.png");
